samples/_failures_safe/1761515268_0582f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8207b52.c: In function ‘main’:
./samples/SAFE/__tmp_d8207b52.c:177:5: error: expected declaration or statement at end of input
  177 |     if (fgets(input, sizeof(input), stdin) == NULL) {
      |     ^~
./samples/SAFE/__tmp_d8207b52.c:177:5: error: expected declaration or statement at end of input
